Crash upon entering Edit Mode and toggling X-Ray #97853

Closed
opened 2022-05-04 15:32:27 +02:00 by Aleksi Juvani · 8 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: Radeon Pro 555X ATI Technologies Inc. 4.5.14761 Core Profile Context FireGL 20.45.40.15 27.20.14540.15002

Blender Version
Broken: version: 3.2.0 Beta, branch: master, commit date: 2022-05-03 21:08, hash: e86b62f195
Worked: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: cc66d1020c

Short description of error

edit_mode_xray_crash.blend

  1. Enter Edit Mode
  2. Toggle X-Ray
  3. Blender crashes in extract_fdots_pos_iter_poly_mesh trying to read mr->me->runtime.subsurf_face_dot_tags which is NULL
**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: Radeon Pro 555X ATI Technologies Inc. 4.5.14761 Core Profile Context FireGL 20.45.40.15 27.20.14540.15002 **Blender Version** Broken: version: 3.2.0 Beta, branch: master, commit date: 2022-05-03 21:08, hash: `e86b62f195` Worked: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: `cc66d1020c` **Short description of error** [edit_mode_xray_crash.blend](https://archive.blender.org/developer/F13051269/edit_mode_xray_crash.blend) 1. Enter Edit Mode 2. Toggle X-Ray 3. Blender crashes in `extract_fdots_pos_iter_poly_mesh` trying to read `mr->me->runtime.subsurf_face_dot_tags` which is `NULL`
Author

Added subscriber: @aleksijuvani

Added subscriber: @aleksijuvani

Added subscribers: @HooglyBoogly, @mano-wii

Added subscribers: @HooglyBoogly, @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Thanks for the report, I can confirm.
I didn't have time to bisect, but I suspect the problem was introduced in 8c25889bb6.
So, @HooglyBoogly, apologies if I'm wrong, but is that commit really related? Would you mind checking it?

Thanks for the report, I can confirm. I didn't have time to bisect, but I suspect the problem was introduced in 8c25889bb6. So, @HooglyBoogly, apologies if I'm wrong, but is that commit really related? Would you mind checking it?
Member

Currently I get a crash with GPU subdivision enabled in this file. Aside from that, I agree that the problem is caused by that commit.

Currently I get a crash with GPU subdivision enabled in this file. Aside from that, I agree that the problem is caused by that commit.
Hans Goudey self-assigned this 2022-05-05 11:18:23 +02:00

This issue was referenced by f9d7313bb7

This issue was referenced by f9d7313bb7ddee9c8bbf5718a3302eb925d9144a

This issue was referenced by 686abf1850

This issue was referenced by 686abf1850545f8c953a76791bd098a5259ce0d6
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97853
No description provided.